--- a/reports/test-report.xml
+++ b/reports/test-report.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testExecutions version="1">
+    <file path="/Users/basithussain/Desktop/se/src/components/Sidebar/SidebarHeader/SidebarHeader.test.tsx">
+        <testCase name="renders System explorer" duration="18"/>
+    </file>
     <file path="/Users/basithussain/Desktop/se/src/components/Sidebar/FolderHeader/FolderHeader.test.tsx">
-        <testCase name="renders learn react link" duration="14"/>
+        <testCase name="renders Nestle Production Line" duration="23"/>
+    </file>
+    <file path="/Users/basithussain/Desktop/se/src/components/Sidebar/SidebarNav/SidebarNav.test.tsx">
+        <testCase name="Sidebar nav new folder icon displays a new Folder image" duration="15"/>
+    </file>
+    <file path="/Users/basithussain/Desktop/se/src/components/DashboardMain/MainHeader/MainHeader.test.tsx">
+        <testCase name="Sidebar nav setting icon displays a setting image" duration="38"/>
+        <testCase name="Button1Test should render a button with the name of Full View" duration="37"/>
+        <testCase name="Button2Test should render a button with the name of logical" duration="13"/>
+        <testCase name="Button3Test should render a button with the name of Topology" duration="12"/>
+        <testCase name="Button4Test should render a button with the name of Applications" duration="11"/>
     </file>
 </testExecutions>
