--- a/src/components/Sidebar/SidebarNav/SidebarNav.css
+++ b/src/components/Sidebar/SidebarNav/SidebarNav.css
@@ -1,18 +1,19 @@
-.sidebarNav{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #ccc;
+.sidebarNav {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
 }
- .nav-left{
-    margin-left: 15px;
+.nav-left {
+  margin-left: 15px;
 }
- .nav-right{
-    margin-right: 15px;
+.nav-right {
+  margin-right: 15px;
 }
 
-.nav-left img,.nav-right img{
-    margin: 0 3px;
+.nav-left img,
+.nav-right img {
+  margin: 0 3px;
 }
