--- a/reports/test-report.xml
+++ b/reports/test-report.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testExecutions version="1">
-    <file path="/Users/basithussain/Desktop/se/src/components/Sidebar/SidebarHeader/SidebarHeader.test.tsx">
-        <testCase name="renders System explorer" duration="19"/>
+    <file path="/media/umar/EDUCATION1/Development/Kevin/se/src/components/Sidebar/SidebarHeader/SidebarHeader.test.tsx">
+        <testCase name="renders System explorer" duration="42"/>
     </file>
-    <file path="/Users/basithussain/Desktop/se/src/components/Sidebar/FolderHeader/FolderHeader.test.tsx">
-        <testCase name="renders Nestle Production Line" duration="23"/>
+    <file path="/media/umar/EDUCATION1/Development/Kevin/se/src/components/Sidebar/FolderHeader/FolderHeader.test.tsx">
+        <testCase name="renders Nestle Production Line" duration="53"/>
     </file>
-    <file path="/Users/basithussain/Desktop/se/src/components/Sidebar/SidebarNav/SidebarNav.test.tsx">
-        <testCase name="Sidebar nav new folder icon displays a new Folder image" duration="15"/>
+    <file path="/media/umar/EDUCATION1/Development/Kevin/se/src/components/Sidebar/SidebarNav/SidebarNav.test.tsx">
+        <testCase name="Sidebar nav new folder icon displays a new Folder image" duration="43"/>
     </file>
-    <file path="/Users/basithussain/Desktop/se/src/components/DashboardMain/MainHeader/MainHeader.test.tsx">
-        <testCase name="Sidebar nav setting icon displays a setting image" duration="43"/>
-        <testCase name="Button1Test should render a button with the name of Full View" duration="36"/>
-        <testCase name="Button2Test should render a button with the name of logical" duration="18"/>
-        <testCase name="Button3Test should render a button with the name of Topology" duration="11"/>
-        <testCase name="Button4Test should render a button with the name of Applications" duration="12"/>
+    <file path="/media/umar/EDUCATION1/Development/Kevin/se/src/App.test.tsx">
+        <testCase name="Renders App component" duration="251"/>
+        <testCase name="renders System explorer component in App" duration="73"/>
+        <testCase name="Renders Nestle Production Line component in App" duration="79"/>
+    </file>
+    <file path="/media/umar/EDUCATION1/Development/Kevin/se/src/components/DashboardMain/MainHeader/MainHeader.test.tsx">
+        <testCase name="Sidebar nav setting icon displays a setting image" duration="79"/>
+        <testCase name="Button1Test should render a button with the name of Full View" duration="90"/>
+        <testCase name="Button2Test should render a button with the name of logical" duration="45"/>
+        <testCase name="Button3Test should render a button with the name of Topology" duration="41"/>
+        <testCase name="Button4Test should render a button with the name of Applications" duration="32"/>
     </file>
 </testExecutions>
